Fixed code alignment

--- a/style.css
+++ b/style.css
@@ -47,12 +47,10 @@ td{
 }
 
 .org-center {
-    
     text-align: center;
 }
 
 .org-right {
-    
     text-align: right;
 }
 
@@ -74,6 +72,18 @@ img {
     background-color: #333;
     padding: 20px;
     width: 100%;
+    /* margin-left: 50%; */
+    /* transform: translateX(-50%); */
+}
+
+.wide {
+    width: 120%;
+    margin-left: 50%;
+    transform: translateX(-50%);
+}
+
+.wider {
+    width: 130%;
     margin-left: 50%;
     transform: translateX(-50%);
 }
